# card-stack

./: .gitignore  Cargo.toml
card-game/: Cargo.toml  README.md
card-game-derive/: Cargo.toml  README.md
card-game-derive/src/: lib.rs
card-game-example/: Cargo.toml
card-game-example/src/: lib.rs  player.rs
card-game-example/src/cards/: mod.rs  monster.rs  spell.rs  trap.rs
card-game-example/src/cards/monster/: fusion.rs  link.rs  mod.rs  ritual.rs  synchro.rs  xyz.rs
card-game-example/src/cards/specifics/: blue_eyes_white_destiny.rs  mod.rs
card-game-example/src/commands/: mod.rs  play_card.rs
card-game-example/src/events/: mod.rs  summon.rs
card-game-example/src/filters/: any.rs  card_in.rs  for.rs  free.rs  in.rs  into_input.rs  mod.rs  of_type.rs  slot.rs  with.rs
card-game-example/src/identifications/: mod.rs
card-game-example/src/stack/: give_attack.rs  mod.rs
card-game-example/src/steps/: end.rs  main.rs  mod.rs  start.rs
card-game-example/src/valid_actions/: give_attack.rs  mod.rs  normal_summon.rs  passive.rs  play_card.rs  special_summon.rs  tribute_summon.rs
card-game-example/src/valid_actions/normal_summon/: input.rs  mod.rs
card-game-example/src/validators/: mod.rs
card-game-example/src/zones/: deck.rs  graveyard.rs  hand.rs  mod.rs  monster.rs  spell.rs
card-game-example/tests/game/: game.rs  main.rs  super_command.rs  utilities.rs
card-game/src/: abilities.rs  cards.rs  context.rs  lib.rs
card-game/src/cards/: command.rs  description.rs  events.rs  manager.rs  mod.rs
card-game/src/commands/: mod.rs
card-game/src/events/: event_action_id.rs  mod.rs  priority.rs
card-game/src/identifications/: action.rs  card.rs  mod.rs  player.rs
card-game/src/steps/: mod.rs
card-game/src/validation/: chain.rs  condition.rs  mod.rs  state_filter.rs  valid_state.rs
card-game/src/validation/actions/: mod.rs  transfer.rs
card-game/src/validation/filters/: card_in.rs  mod.rs
card-game/src/zones/: context.rs  mod.rs  slot.rs  valid_card_id.rs  zone_card_id.rs
card-stack/: Cargo.toml  README.md
card-stack-example/: Cargo.toml
card-stack-example/src/: game.rs  identifications.rs  main.rs  requirements.rs  resolvers.rs  stack.rs
card-stack-example/src/actions/: deal_damage.rs  heal.rs  mod.rs
card-stack-example/src/filters/: mod.rs
card-stack/src/: actions.rs  lib.rs  priority.rs  requirements.rs
card-validation/: Cargo.toml
card-validation/src/: expects.rs  lib.rs
state-validation/: Cargo.toml
state-validation-derive/: Cargo.toml
state-validation-derive/src/: lib.rs
state-validation/src/: input_collector.rs  lib.rs  state_filter.rs
state-validation/src/actions/: mod.rs
state-validation/state-validation-derive/src/: lib.rs
state-validation/state-validation/src/: lib.rs
