[package]
name = "card-game-derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Albar <albarjob@gmail.com>"]
repository = "https://github.com/Ripper53/card-stack"
description = "Macros for card-game crate"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.105", features = ["visit-mut"] }
heck = "0.5.0"
itertools = "0.14.0"
