[package]
name = "card-game"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Albar <albarjob@gmail.com>"]
description = "Framework for building card games"

[dependencies]
card-game-derive = { path = "../card-game-derive", version = "0.1", optional = true }
state-validation = { path = "../state-validation/state-validation", version = "0.1", default-features = false, features = [
    "input_collector",
] }
card-stack = { path = "../card-stack", version = "0.1" }
thiserror = "2.0.14"
variadics_please = "1.1.0"

[features]
default = ["derive"]
derive = ["dep:card-game-derive"]
